--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>FELOZ FELOZ no cumpleaños</title>
+    <title>¡FELIZ FELIZ NO CUMPLEAÑOS! ó Fröhlichen Nicht-Geburtstag!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="landing">
-        <h1>FELOZ FELOZ no cumpleaños, Cuajo 🎉</h1>
+        <h1>¡FELIZ FELIZ NO CUMPLEAÑOS! ó Fröhlichen Nicht-Geburtstag! 🎉</h1>
         <img src="img/cuajo.jpg" alt="Cuajo" class="main-photo">
     </div>
     
@@ -16,14 +16,29 @@
             <li onclick="showTab('cumple')">🎂 No Cumpleaños</li>
             <li onclick="showTab('momentos')">📸 Momentos</li>
             <li onclick="showTab('sorpresa')">🎁 Sorpresa</li>
-            <li onclick="showTab('mensaje')">💌 Mensaje</li>
+            <li onclick="showTab('mensaje')">💌 Cartita</li>
         </ul>
     </nav>
 
     <section id="cumple" class="tab">Porque cualquier día es perfecto para celebrarte, Cuajo.</section>
     <section id="momentos" class="tab">Aquí irán tus momentos más bonitos 😘</section>
     <section id="sorpresa" class="tab">✨ ¡Sorpresa oculta aquí! ✨</section>
-    <section id="mensaje" class="tab">Gracias por ser tú. Feliz no cumpleaños 💖</section>
+    <section id="mensaje" class="tab">Querida Cuajo,
+
+¡Fröhlichen Nicht-Geburtstag!
+Hoy no es tu cumpleaños, pero eso no me detiene para celebrarte como si lo fuera.
+
+Sé que no estuve contigo ese día especial, y créeme que lo he tenido en el corazón desde entonces. A veces la vida nos pone lejos en los momentos que más quisiéramos estar cerca, pero hoy, con toda la intención y el cariño del mundo, quiero decirte lo que no pude en ese momento.
+
+No se me olvida tu día, ni mucho menos lo que significas para mí. Al contrario, he estado esperando este pequeño instante perfecto para recordarte que eres una persona increíble. Tu risa, tu forma de ver la vida, la manera en que iluminas un lugar con solo estar ahí… todo eso te hace inolvidable.
+
+Este “no cumpleaños” es solo una excusa para decirte que me importas muchísimo. Que me emociona cada día compartir momentos contigo, y que si pudiera retroceder el tiempo, estaría ahí a tu lado celebrando como se debe, con pastel, abrazos y una sonrisa que no me cabe en el pecho.
+
+Deseo que todo lo bueno que sueñas siga llegando a tu vida, y que nunca te falte un motivo para sonreír. Yo, por mi parte, siempre voy a estar buscando nuevas formas de hacerte sentir especial, así sea en un día cualquiera como hoy.
+
+Brindo por ti, Cuajo. Por lo que eres, por lo que sueñas y por todo lo bonito que aún nos queda por vivir.
+
+MIT LIEBE, Diego 💖</section>
 
     <div class="spotify-player">
         <iframe style="border-radius:12px" 
