--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="landing">
         <h1>¡FELIZ FELIZ NO CUMPLEAÑOS! ó Fröhlichen Nicht-Geburtstag! 🎉</h1>
-        <img src="img/cuajo.jpg" alt="Cuajo" class="main-photo">
+        <img src=".jpg.jpeg" alt="Cuajo" class="main-photo">
     </div>
     
     <nav>
