--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="landing">
         <h1>¡FELIZ FELIZ NO CUMPLEAÑOS! ó Fröhlichen Nicht-Geburtstag! 🎉</h1>
-        <img src="FotoCuajo.jpg" alt="UN momento de cuajo" class="main-photo">
+        <img src="FotoCuajo" alt="Un momento de cuajo" class="FotoCuajo.jpg">
     </div>
     
     <nav>
