--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="landing">
         <h1>¡FELIZ FELIZ NO CUMPLEAÑOS! ó Fröhlichen Nicht-Geburtstag! 🎉</h1>
-        <img src=".jpg.jpeg" alt=".jpg.jpeg" class=".jpg.jpeg">
+        <img src="FotoCuajo.jpg" alt="FotoCuajo.jpg" class="FotoCuajo.jpg">
     </div>
     
     <nav>
