--- a/index.html
+++ b/index.html
@@ -14,15 +14,26 @@
     <nav>
         <ul>
             <li onclick="showTab('cumple')">🎂 No Cumpleaños</li>
-            <li onclick="showTab('momentos')">📸 Momentos</li>
-            <li onclick="showTab('sorpresa')">🎁 Sorpresa</li>
+            <li onclick="showTab('Viaje')">📸 Momentos</li>
+            <li onclick="showTab('Invitación ')">🎁 Sorpresa</li>
             <li onclick="showTab('mensaje')">💌 Cartita</li>
         </ul>
     </nav>
 
     <section id="cumple" class="tab">Porque cualquier día es perfecto para celebrarte, Cuajo.</section>
     <section id="momentos" class="tab">Aquí irán tus momentos más bonitos 😘</section>
-    <section id="sorpresa" class="tab">✨ ¡Sorpresa oculta aquí! ✨</section>
+    <section id="sorpresa" class="tab">✨ ¡Hola, Cuajo 🏁❤️
+
+Tengo una propuesta digna del paddock de Ferrari:
+Quiero invitarte a ver la nueva película de la Fórmula 1.
+
+Tú serías la escudería Ferrari, impecable, con clase, y siempre robando miradas…
+y yo, bueno… yo sería el piloto que solo quiere una vuelta contigo, aunque sea en la curva más cerrada del calendario 😅🏎️💘
+
+Si te animas, prometo llevar mi pierna buena, comentarios de segundo lugar (porque el primero siempre te lo dejo a ti) y buena compañía en la recta final.
+Mas chistes malos como ese.
+
+¿Aceptas esta pole position a mi lado? ✨</section>
     <section id="mensaje" class="tab">Querida Cuajo,
 
 ¡Fröhlichen Nicht-Geburtstag!
