--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </nav>
 
     <section id="cumple" class="tab">Porque cualquier día es perfecto para celebrarte, Cuajo.</section>
-    <section id="momentos" class="tab">Aquí irán tus momentos más bonitos 😘</section>
-    <section id="sorpresa" class="tab">✨ ¡Hola, Cuajo 🏁❤️
+    <section id="Viaje" class="tab">Aquí irán tus momentos más bonitos 😘</section>
+    <section id="Invitación" class="tab"> ¡Hola, Cuajo 🏁❤️
 
 Tengo una propuesta digna del paddock de Ferrari:
 Quiero invitarte a ver la nueva película de la Fórmula 1.
