--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="landing">
         <h1>¡FELIZ FELIZ NO CUMPLEAÑOS! ó Fröhlichen Nicht-Geburtstag! 🎉</h1>
-      <img src="FotoCuajo" alt="Foto de Cuajo" class="main-photo">
+     <img src="FotoCuajo.jpg" alt="Foto de Cuajo" class="main-photo">
     </div>
     
     <nav>
@@ -22,7 +22,7 @@
 
     <section id="cumple" class="tab">Porque cualquier día es perfecto para celebrarte, Cuajo.</section>
     <section id="Viaje" class="tab">Aquí irán tus momentos más bonitos 😘</section>
-    <section id="Invitación" class="tab"> ¡Hola, Cuajo 🏁❤️
+   <section id="Invitación"> class="tab"> ¡Hola, Cuajo 🏁❤️
 
 Tengo una propuesta digna del paddock de Ferrari:
 Quiero invitarte a ver la nueva película de la Fórmula 1.
