--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <section id="momentos" class="tab">
         <div id="momentos">
             <!-- Agregar las fotos aquí -->
-            <img src="foto1.jpg" alt="Recuerdo 1">
-            <img src="foto2.jpg" alt="Recuerdo 2">
-            <img src="foto3.jpg" alt="Recuerdo 3">
+            <img src="WhatsApp Image 2025-05-06 at 20.43.05.jpg" alt="Recuerdo 1">
+            <img src="WhatsApp Image 2025-05-07 at 19.02.48.jpg" alt="Recuerdo 2">
+            <img src="WhatsApp Image 2025-05-06 at 19.22.03.jpg" alt="Recuerdo 3">
             <img src="foto4.jpg" alt="Recuerdo 4">
         </div>
     </section>
