--- a/index.html
+++ b/index.html
@@ -98,5 +98,18 @@
         // Mostrar la pestaña inicial al cargar la página
         window.onload = () => showTab('cumple');
     </script>
+    <div class="collage-fondo">
+  <div class="collage-banner">
+    <div class="collage-img">
+      <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Persona" />
+    </div>
+    <div class="collage-text">
+      <span class="collage-letra" style="left:0;top:0;transform:rotate(-4deg);">Shape</span>
+      <span class="collage-letra" style="left:0;top:55px;transform:rotate(2deg);">your</span>
+      <span class="collage-letra" style="left:0;top:110px;transform:rotate(-3deg);">own</span>
+      <span class="collage-letra" style="left:0;top:165px;transform:rotate(1deg);">wealth</span>
+    </div>
+  </div>
+</div>
 </body>
 </html>
